project (perls-src C CXX Java)

# CONFIGURE CMAKE
#========================================================================
if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
  add_definitions (-D_LINUX -D_x64)
elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "i386")
  add_definitions (-D_LINUX -D_x86)
elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "i686")
  add_definitions (-D_LINUX -D_x86)
else ()
  message (SEND_ERROR "Uknown CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
endif ()

# CONFIGURE C
#========================================================================
set (CMAKE_C_FLAGS "-u MAIN__ -std=gnu99 -fopenmp -Wfloat-equal -Wall -Wundef -Wno-strict-aliasing -Wno-unused-function")

# CONFIGURE C++
#========================================================================
set (CMAKE_CXX_FLAGS "-u MAIN__ -Wall -Wundef -Wno-strict-aliasing -std=c++11")

# CONFIGURE JAVA
#========================================================================
set (CMAKE_Java_CREATE_SHARED_LIBRARY TRUE)
mark_as_advanced (CMAKE_Java_ARCHIVE CMAKE_Java_RUNTIME)

set (CLASSPATH)
perls_java_find_library (lcm.jar)
#perls_java_find_library (bot2-lcmgl.jar)
perls_java_find_library (lcmspy_plugins_bot2.jar)
perls_java_find_library (lcmtypes_bot2-core.jar)
#perls_java_find_library (lcmtypes_bot2-frames.jar)
perls_java_find_library (lcmtypes_bot2-param.jar)
perls_java_find_library (lcmtypes_bot2-procman.jar)

# CONFIGURE PYTHON
#========================================================================

# write perls package __init__.py
set (INIT_PY ${PYTHON_OUTPUT_PATH}/perls/__init__.py)
file (WRITE  ${INIT_PY} "\"\"\"CMAKE AUTOGENERATED FILE - DO NOT EDIT BY HAND!!\"\"\"\n")
foreach (PKG ${PERLS_PYTHON_PACKAGES})
  file (APPEND ${INIT_PY} "import ${PKG}\n")
  file (APPEND ${INIT_PY} "\n")
endforeach ()

add_custom_command (
  OUTPUT ${INIT_PY}
  COMMAND touch ${INIT_PY}
)
add_custom_target (__init__.py ALL
  DEPENDS ${INIT_PY}
)
if (PERLS_PYTHON_PACKAGES)
  add_dependencies (__init__.py ${PERLS_PYTHON_PACKAGES})
endif ()

# install perls package __init__.py
install (FILES ${INIT_PY}
  DESTINATION ${PYTHON_INSTALL_PATH}/perls
  )


# GROUPS
#========================================================================
perls_add_group (carlab carl "Build carlab group?" OFF)
perls_add_group (core core "Build core group?" ON)
perls_add_group (examples ex "Build examples group?" OFF)
perls_add_group (hauv hauv "Build hauv group?" OFF)
perls_add_group (iver iver "Build iver group?" OFF)
perls_add_group (pvn pvn "Build persistent visual navigation group?" OFF)
perls_add_group (quadrotors quad "Build quadrotor group?" OFF)
perls_add_group (segway seg "Build segway group?" OFF)
perls_add_group (sensors sen "Build sensors drivers group?" OFF)
perls_add_group (slam slam "Build slam group?" OFF)
perls_add_group (vision vis "Build vision group?" OFF)
perls_add_group (utilities util "Build utilities group?" OFF)
perls_add_group (sirius sirius "Build Sirius group?" OFF)
perls_add_group (acfr acfr "Build ACFR group?" OFF)
perls_add_group (simulator simulator "Build Simulator group?" ON)
perls_add_group (wam-v wam-v "Build wam-v group?" ON)
perls_add_group (waveglider waveglider "Build Waveglider group?" ON)

# ROOT-LEVEL TARGETS
#========================================================================
perls_add_folder (viewer "Build viewer?" OFF)

